--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,16 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
+            <version>4.0.3.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-ldap</artifactId>
+            <version>4.0.3.RELEASE</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
@@ -64,7 +74,7 @@
         <!-- ============================================== -->
 
         <!-- ============================================== -->
-        <!-- TAG LIBRARIES [JSTL, JASPER, SPRING SECURITY] -->
+        <!-- TAG LIBRARIES [JSTL, JASPER] -->
         <!-- ============================================== -->
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -73,16 +83,6 @@
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-jasper</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-taglibs</artifactId>
-            <version>4.0.3.RELEASE</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-ldap</artifactId>
-            <version>4.0.3.RELEASE</version>
         </dependency>
         <!-- ============================================== -->
 
