--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.3.3.RELEASE</version>
         <relativePath/>
-        <!-- lookup parent from repository -->
+        <!-- lookup parent from repositories -->
     </parent>
 
     <properties>
@@ -69,7 +69,7 @@
         </dependency>
         <dependency>
             <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <artifactId>mysql-connector-gjava</artifactId>
         </dependency>
         <!-- ============================================== -->
 
