update ui make jquery ajax requests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.username=${DOCKER_DATABASE_USERNAME}
 spring.datasource.password=${DOCKER_DATABASE_PASSWORD}
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.test-on-borrow=true
+spring.datasource.j
