--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,22 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!-- ============================================== -->
+        <!-- ENCRYPTION LIBRARY -->
+        <!-- ============================================== -->
+        <dependency>
+            <groupId>org.jasypt</groupId>
+            <artifactId>jasypt</artifactId>
+            <version>1.9.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jasypt</groupId>
+            <artifactId>jasypt-springsecurity3</artifactId>
+            <version>1.9.2</version>
+        </dependency>
+
         <!-- ============================================== -->
 
         <!-- ============================================== -->
