Add env vars to applicatoin profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:2424/docker_env
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.url=${DOCKER_DATABASE_URL}
+spring.datasource.username=${DOCKER_DATABASE_USERNAME}
+spring.datasource.password=${DOCKER_DATABASE_PASSWORD}
+
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.test-on-borrow=true
-
-server.port = 8090
